force-app/main/default/objects/Custom_Email_Message__c/Custom_Email_Message__c.object-meta.xml
<CustomObject>
    <label>Custom Email Message</label>
    <nameField>
        <displayFormat>MSG-{000000}</displayFormat>
        <label>Custom Email Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Email Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>