force-app/main/default/objects/Custom_Email_Message__c/fields/Message_Id__c.field-meta.xml
<CustomField>
    <fullName>Message_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Message Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>