force-app/main/default/objects/Custom_Email_Message__c/fields/Message_Text__c.field-meta.xml
<CustomField>
    <fullName>Message_Text__c</fullName>
    <label>Message Text</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>